Moved to local file

--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -777,7 +777,7 @@
     "\n",
     "*************\n",
     "\n",
-    "![fig:6RIK](https://github.com/krishauser/RoboticSystemsBook/blob/master/figures/modeling/ik_6R.png?raw=1)\n",
+    "![fig:6RIK](figures/modeling/ik_6R.png)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:6RIK\">Figure 4</a>\n",
     "(a) A 6DOF industrial robot with two shoulder DOFs, an elbow, and\n",
@@ -2921,7 +2921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
@@ -2954,7 +2954,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "278.517px"
+    "width": "278.516px"
    },
    "toc_section_display": true,
    "toc_window_display": true
