Added quiz items and exercises

--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -766,7 +766,12 @@
     "$\\mathbf{y} = (y_{1},y_{2})$ relative to $W$, then the world coordinates of\n",
     "any point $P$ such that $\\mathbf{p}$ is its coordinates in the frame $F$ can\n",
     "be calculated by the rigid transform\n",
-    "$$\\mathbf{p}_W = \\begin{bmatrix}x_{1} & y_{1} \\\\ x_{2} & y_{2} \\end{bmatrix} \\mathbf{p} + \\mathbf{t}.$$ Hence,\n",
+    "\n",
+    "$$\n",
+    "  \\mathbf{p}_W = \\begin{bmatrix}x_{1} & y_{1} \\\\ x_{2} & y_{2} \\end{bmatrix} \\mathbf{p} + \\mathbf{t}.\n",
+    "$$\n",
+    "\n",
+    "Hence,\n",
     "by storing $R = \\begin{bmatrix}x_{1} & y_{1} \\\\ x_{2} & y_{2} \\end{bmatrix}$ and $\\mathbf{t}$ we can\n",
     "perform this calculation for any point in $F$. (We remark that the matrix\n",
     "is a rotation because $X$ and $Y$ are both orthogonal and $Y$ is\n",
@@ -784,13 +789,18 @@
     "$\\mathbf{t}_B$. Then given the coordinates $\\mathbf{p}^A$ of some point $P$\n",
     "relative to $A$, we can determine $P$'s coordinates relative to\n",
     "$\\mathbf{p}^B$ in two steps. First, we calculate its world coordinates:\n",
-    "$$\\mathbf{p}^W = R_A \\mathbf{p}^A + \\mathbf{t}_A$$ And then we perform the inverse of\n",
+    "\n",
+    "$$\\mathbf{p}^W = T_A(\\mathbf{p}^A) = R_A \\mathbf{p}^A + \\mathbf{t}_A$$\n",
+    "\n",
+    "And then we perform the inverse of\n",
     "$B$ coordinates to world coordinate to obtain its coordinates with\n",
-    "respect to $B$: $$\\mathbf{p}^B = R_B^T (\\mathbf{p}^W - \\mathbf{t}_B).$$\n",
+    "respect to $B$:\n",
+    "\n",
+    "$$\\mathbf{p}^B = T_B^{-1}(\\mathbf{p}^W) = R_B^T (\\mathbf{p}^W - \\mathbf{t}_B).$$\n",
     "\n",
     "This transform can be calculated for all points by the composition of\n",
     "the transform from $A \\rightarrow W$ and then $W \\rightarrow B$:\n",
-    "$$\\mathbf{p}^B = R_B^T R_A \\mathbf{p}^A + R_B^T(\\mathbf{t}_A - \\mathbf{t}_B).$$\n"
+    "$$\\mathbf{p}^B = T_B^{-1}(T_A(\\mathbf{p}^A)) = R_B^T R_A \\mathbf{p}^A + R_B^T(\\mathbf{t}_A - \\mathbf{t}_B).$$\n"
    ]
   },
   {
@@ -802,14 +812,17 @@
     "Homogeneous coordinates gives a convenient representation of rigid\n",
     "transforms as linear transforms on an expanded space. Moreover, it\n",
     "compactly represents the distinction between positional and directional\n",
-    "quantities. The idea is to augment every point with a 3rd *homogeneous\n",
+    "quantities. The idea is to augment every point with an additional *homogeneous\n",
     "coordinate*, which is 1 if it is positional and 0 if it is directional.\n",
-    "This operation is denoted with the operator $\\hat{\\cdot}$:\n",
+    "This operation is denoted with the hat operator $\\hat{\\cdot}$.\n",
+    "\n",
+    "For 2D points and directions, we have\n",
     "$$\\hat{\\mathbf{p}} = \\begin{bmatrix} p_x \\\\ p_y \\\\ 1 \\end{bmatrix}$$\n",
-    "$$\\hat{\\mathbf{v}} = \\begin{bmatrix} v_x \\\\ v_y \\\\ 0 \\end{bmatrix}$$ Then, a 2D rigid\n",
+    "$$\\hat{\\mathbf{v}} = \\begin{bmatrix} v_x \\\\ v_y \\\\ 0 \\end{bmatrix}$$\n",
+    "Then, a 2D rigid\n",
     "transformation of both positions and directions is represented uniformly\n",
     "by a $3\\times 3$ matrix multiplication:\n",
-    "$${T(\\hat {\\mathbf{x}})} = \\begin{bmatrix}\n",
+    "$$\\hat{T}(\\hat {\\mathbf{x}}) = \\begin{bmatrix}\n",
     "\\cos \\theta & -\\sin \\theta & t_x \\\\\n",
     "\\sin \\theta & \\cos \\theta & t_y \\\\\n",
     "0 & 0 & 1 \n",
@@ -818,6 +831,19 @@
     "$T(\\mathbf{x}) = R(\\theta) \\mathbf{x} + \\mathbf{t}$ is a rotation about angle $\\theta$\n",
     "followed by a translation of vector $\\mathbf{t} = (t_x,t_y)$.\n",
     "\n",
+    "In 3D, the hat operator adds a 4th coordinate:\n",
+    "For 2D points and directions, we have\n",
+    "$$\\hat{\\mathbf{p}} = \\begin{bmatrix} p_x \\\\ p_y \\\\ p_z \\\\ 1 \\end{bmatrix}$$\n",
+    "$$\\hat{\\mathbf{v}} = \\begin{bmatrix} v_x \\\\ v_y \\\\ v_z \\\\ 0 \\end{bmatrix}$$\n",
+    "and a 3D transform is represented \n",
+    "by a $4\\times 4$ matrix multiplication:\n",
+    "$$\\hat{T}(\\hat {\\mathbf{x}}) = \\begin{bmatrix}\n",
+    "  &   &   &  t_x \\\\\n",
+    "  & R &   &  t_y \\\\\n",
+    "  &   &   &  t_z \\\\\n",
+    "0 & 0 & 0 & 1 \n",
+    "\\end{bmatrix} \\hat{\\mathbf{x}}$$\n",
+    "\n",
     "Note that when applied to homogeneous positions, the rigid transform is\n",
     "applied to the first two coordinates of the vector while the homogeneous\n",
     "coordinate remains 1 (since the dot product of a position representation\n",
@@ -825,7 +851,11 @@
     "directions, only the rotation is applied to the first two coordinates of\n",
     "the vector, since the third 0 coordinate nullifies the effect of the\n",
     "third column. The homoeneous coordinate remains 0, since the dot product\n",
-    "of a position representation with the last row of the matrix is 0."
+    "of a position representation with the last row of the matrix is 0.\n",
+    "\n",
+    "The nice thing about this representation is that transform application is a matrix-vector multiply, transform composition is a matrix-matrix multiply, and transform inversion is a matrix inversion. This makes it much easier to write out complex transformations. For example, consider the problem of the coordinate transform from frame $A$ to frame $B$ that we described above.  Rather than writing out the operator expression $T_B^{-1}(T_A(\\mathbf{p}^A))$, using homogeneous coordinates this becomes a series of matrix-matrix and matrix-vector multiplies:\n",
+    "\n",
+    "$$\\hat{p}^B = \\hat{T}_B^{-1} \\cdot \\hat{T}_A \\cdot \\hat{p}^A$$."
    ]
   },
   {
@@ -838,7 +868,7 @@
     "In small 2D examples we can often treat coordinates casually, with our\n",
     "minds quickly filling in the gaps of meaning. However, once we introduce\n",
     "rotations, or move to 3D and beyond, this type of casual thinking runs\n",
-    "the risk of making the Robot walk through a wall! It is\n",
+    "the risk of making the robot walk through a wall! It is\n",
     "unlikely that your linear algebra software package (e.g., Matlab, or\n",
     "Numpy in Python) will help you guard against performing invalid\n",
     "operations, since you will be working with vector or matrix datatypes.\n",
@@ -1242,14 +1272,23 @@
     "\n",
     "    -   `frame`: the name of its reference frame.\n",
     "\n",
-    "    Do the same for a `Direction` data structure. Now, implement methods\n",
-    "    `Point.to(frame)` and `Direction.to(frame)` that compute a new `Point`\n",
-    "    and `Direction`, respectively, whose reference frames are now the\n",
+    "    Do the same for a `Directional` data structure. Now, implement methods\n",
+    "    `Point.to(frame)` and `Directional.to(frame)` that compute a new `Point`\n",
+    "    and `Directional`, respectively, whose reference frames are now the\n",
     "    given frame, and whose coordinates are expressed correctly relative\n",
     "    to the new frame.\n",
     "\n",
+    "*   Extend the coordinate management system of exercise 12 to implement\n",
+    "    geometric operations, enforcing that each of the items needs to be\n",
+    "    of the same reference frame.  Ensure that `Point - Point = Directional`,\n",
+    "    `Point + Directional = Directional`, `Directional +/- Directional = Directional`,\n",
+    "    and `Directional * scalar = Directional`.\n",
+    "    \n",
+    "    [This tutorial](https://www.tutorialsteacher.com/python/magic-methods-in-python) for\n",
+    "    operator overriding in Python will come in handy here.\n",
+    "\n",
     "*   Extend the coordinate management system of exercise 12 to also include\n",
-    "    **units** that should be specified to the `Point`, `Direction`, and `Frame`\n",
+    "    **units** that should be specified to the `Point`, `Directional`, and `Frame`\n",
     "    structure upon construction. Implement support for `'m'`, `'mm'`, `'cm'` and `'km'`\n",
     "    arguments indicating meters, millimeters, centimeters, and kilometers."
    ]
@@ -1278,12 +1317,12 @@
     "        #TODO: what here?\n",
     "        return Point(self.coords,newframe)\n",
     "\n",
-    "class Direction:\n",
+    "class Directional:\n",
     "    def __init__(self,coords,frame):\n",
     "        self.coords = coords\n",
     "        self.frame = frame\n",
     "    def to(self,newframe):\n",
-    "        \"\"\"Returns a Direction expressing the same physical direction in space, but represented in the new frame\"\"\"\n",
+    "        \"\"\"Returns a Directional expressing the same physical direction in space, but represented in the new frame\"\"\"\n",
     "        #what here?\n",
     "        return Point(self.coords,newframe)"
    ]
@@ -1326,7 +1365,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cf924e654244ea099d9c724996377ad",
+       "model_id": "8453e491da6a4af4a0bc5484f1fa80a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1375,7 +1414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
@@ -1411,7 +1450,7 @@
     "width": "335.188px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
