Fixed algorithm links and headers

--- a/AdvancedTopicsInPlanning.ipynb
+++ b/AdvancedTopicsInPlanning.ipynb
@@ -138,7 +138,8 @@
     "This gives rise to a simple algorithm for pick-and-place planning:\n",
     "\n",
     "*************\n",
-    "<a name=\"alg:SimplePickAndPlace\">**Algorithm Simple Pick-and-Place**</a>\n",
+    "<a name=\"alg:SimplePickAndPlace\"></a>\n",
+    "**Algorithm Simple Pick-and-Place**\n",
     "\n",
     "1. Let $q_0=(q_{R,0},A)$ be the current joint configuration of the robot and object.\n",
     "2. Determine candidate grasps $G_1,\\ldots,G_N$ for the object\n",
@@ -297,7 +298,8 @@
     "The general issue in each of these three settings is that the basic planner **becomes committed to a choice** that may not yield a feasible solution in future steps.  We have dealt with it above by adding more for loops so that earlier choices can be revisited, but as the number of sequential choices grows, this becomes progressively less convenient to implement and less efficient.  Fortunately, there's a general-purpose approach to deal with this situation that can yield probabilistic completeness.  The strategy is inspired by **least-commitment planning** algorithms that solve constraint satisfaction problems (CSPs).  We keep a working set of *partial plans* that contain components of a complete plan. Let a partial plan be denoted $P$, with $P[c]$ the solution to some component $c$ if the component has been solved, or $nil$ if no solution has been found.  The strategy operates like this:\n",
     "\n",
     "**************\n",
-    "<a name=\"alg:LeastCommitmentPlanning\"><b>(Meta-)Algorithm Least-Commitment Planning</b></a>\n",
+    "<a name=\"alg:LeastCommitmentPlanning\"></a>\n",
+    "**(Meta-)Algorithm Least-Commitment Planning**\n",
     "\n",
     "1. Initialize the working set $W$ to contain an empty partial plan.\n",
     "2. **while** no complete path is found, repeat the following:\n",
@@ -354,7 +356,8 @@
     "In order to implement this strategy, we must define a distance metric $d(\\sigma,\\sigma^\\prime)$ on the space of modes. \n",
     "\n",
     "**************\n",
-    "<a name=\"alg:ProbabilisticTreeOfRoadmaps\"><b>Algorithm Probabilistic Tree of Roadmaps</b></a>\n",
+    "<a name=\"alg:ProbabilisticTreeOfRoadmaps\"></a>\n",
+    "**Algorithm Probabilistic Tree of Roadmaps**\n",
     "\n",
     "1. Initialize the mode tree $\\mathcal{T} \\gets \\{ \\sigma_0 \\}$.  Attach $q_0$ to $\\sigma_0$ as its \"transition configuration\".\n",
     "2. Initialize the set of feasible mode sequences $G \\gets \\{ \\}$.\n",
