Fixed algorithm links and headers

--- a/GraphSearch.ipynb
+++ b/GraphSearch.ipynb
@@ -96,7 +96,8 @@
     "\n",
     "******************\n",
     "\n",
-    "<a name=\"alg:Dijkstras\">Algorithm Dijkstras</a>(G=(V,E),s,g)\n",
+    "<a name=\"alg:Dijkstras\"></a>\n",
+    "**Algorithm Dijkstras**$(G=(V,E),s,g)$\n",
     "\n",
     "1. $d[v] \\gets \\infty$ for all $v\\in V$\n",
     "* $d[s] \\gets 0$\n",
@@ -125,7 +126,8 @@
     "\n",
     "******************\n",
     "\n",
-    "<a name=\"alg:PredecessorTraversal\">Algorithm PredecessorTraversal</a>(p,s,g)\n",
+    "<a name=\"alg:PredecessorTraversal\"></a>\n",
+    "**Algorithm PredecessorTraversal**$(p,s,g)$\n",
     "\n",
     "1. $L \\gets$ empty list\n",
     "* $v \\gets g$\n",
