Fixed algorithm links and headers

--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -283,9 +283,10 @@
     "\n",
     "****************\n",
     "\n",
+    "<a href=\"fig:2RWorkspace\"></a>\n",
     "![fig:2RWorkspace](figures/modeling/2R_workspace.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a href=\"fig:2RWorkspace\">Figure 1</a>. A 2R manipulator, with joint limits and a second link somewhat shorter than the first has a reachable (position) workspace that is a portion of an annulus (planar donut shape).</div>\n",
+    "<div class=\"figcaption\">Figure 1. A 2R manipulator, with joint limits of $\\pm 45^\\circ$ for the first joint and $\\pm 90^\\circ$ for the second, and a second link somewhat shorter than the first. Treating the position of the end effector as the workspace coordinate, the reachable workspace is a portion of an annulus (planar donut shape).</div>\n",
     "\n",
     "****************"
    ]
@@ -621,8 +622,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Examples \n",
-    "\n",
+    "### Examples \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2RP manipulator\n",
     "Consider a 2RP spherical manipulator whose first axis rotates about the\n",
     "$z$ axis, the second about the $y$ axis, and the prismatic joint\n",
     "translates about the $x$ axis. All reference frames are aligned with the\n",
@@ -631,9 +638,10 @@
     "\n",
     "******************\n",
     "\n",
+    "<a name=\"fig:2RPManipulator\"></a>\n",
     "![fig:2RPManipulator](figures/modeling/2RP.png)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:2RPManipulator\">Figure 3</a>\n",
+    "<div class=\"figcaption\">Figure 3.\n",
     "A spherical manipulator. Without loss of generality, we can consider\n",
     "the \"shoulder\" to be the world origin ($L_1=0$), and the third\n",
     "configuration variable $q_3$ to be the distance of the end effector to\n",
@@ -722,6 +730,95 @@
     "could be rotated so that $\\mathbf{a}_2 = (0,-1,0)$, or equivalently, that the\n",
     "reference transform $T_{2,ref}$ rotates $\\pi$ radians about either the\n",
     "$x$ or $z$ axis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6R manipulator\n",
+    "\n",
+    "Now consider a more typical 6R industrial robot arm, configured with the reference coordinate system as shown in <a href=\"fig:6RManipulator\">Figure 4</a>. (Ignore the gripper degree of freedom.)  The shoulder axes and wrist axes intersect at a common point, indicated by the marked coordinate frames.\n",
+    "\n",
+    "******************\n",
+    "\n",
+    "<a name=\"fig:6RManipulator\"></a>\n",
+    "![fig:6RManipulator](figures/modeling/6R.svg)\n",
+    "\n",
+    "<div class=\"figcaption\">Figure 4.\n",
+    "A typical kinematic configuration for a 6R industrial manipulator. The \"shoulder\" has 2 degrees of freedom, the \"elbow\" has 1, and the \"wrist\" has 3.  \n",
+    "</div>\n",
+    "\n",
+    "******************\n",
+    "\n",
+    "In this definition, the joint axes are aligned to the Z Y Y X Y Z axes, listed from the base to the end effector.  All reference orientations are aligned to the world coordinate frame.  The coordinate frames are also oriented such that positive joint angles turn counterclockwise with respect to their local coordinate frames, and hence we can more specifically list the joint axes as +Z +Y +Y +X +Y +Z. \n",
+    "\n",
+    "Let us place the relative reference transforms so that both of the first 2 link transforms are at the intersection of the shoulder, and the last 3 link transforms are at the intersection of the wrist.  All relative transforms have the identity matrix as their rotation component. Link 1's reference transform shifts by $L_1$ units in the Z direction, link 3 shifts by $L_2$ units in the X direction, and link 4 shifts by $L_3$ units the X direction, while links 2, 5, and 6 induce no translation.\n",
+    "\n",
+    "Ultimately, forward kinematics yields the following transforms of each link:\n",
+    "\n",
+    "$$T_1(q) = \n",
+    "\\left[\\begin{array}{ccc|c}\n",
+    "  &          &   & 0 \\\\\n",
+    "  & R_z(q_1) &   & 0 \\\\\n",
+    "  &          &   & L_1 \\\\\n",
+    "\\hline\n",
+    "0 & 0 & 0 & 1\n",
+    "\\end{array}\\right]\n",
+    "$$\n",
+    "\n",
+    "$$T_2(q) = \n",
+    "T_1(q) \\left[\\begin{array}{ccc|c}\n",
+    "  &          &   & 0 \\\\\n",
+    "  & R_y(q_2) &   & 0 \\\\\n",
+    "  &          &   & 0 \\\\\n",
+    "\\hline\n",
+    "0 & 0 & 0 & 1\n",
+    "\\end{array}\\right]\n",
+    "$$\n",
+    "\n",
+    "$$T_3(q) = \n",
+    "T_2(q) \\left[\\begin{array}{ccc|c}\n",
+    "  &          &   & L_2 \\\\\n",
+    "  & R_y(q_3) &   & 0 \\\\\n",
+    "  &          &   & 0 \\\\\n",
+    "\\hline\n",
+    "0 & 0 & 0 & 1\n",
+    "\\end{array}\\right]\n",
+    "$$\n",
+    "\n",
+    "$$T_4(q) = \n",
+    "T_3(q) \\left[\\begin{array}{ccc|c}\n",
+    "  &          &   & L_3 \\\\\n",
+    "  & R_x(q_4) &   & 0 \\\\\n",
+    "  &          &   & 0 \\\\\n",
+    "\\hline\n",
+    "0 & 0 & 0 & 1\n",
+    "\\end{array}\\right]\n",
+    "$$\n",
+    "\n",
+    "$$T_5(q) = \n",
+    "T_4(q) \\left[\\begin{array}{ccc|c}\n",
+    "  &          &   & 0 \\\\\n",
+    "  & R_y(q_5) &   & 0 \\\\\n",
+    "  &          &   & 0 \\\\\n",
+    "\\hline\n",
+    "0 & 0 & 0 & 1\n",
+    "\\end{array}\\right]\n",
+    "$$\n",
+    "\n",
+    "$$T_6(q) = \n",
+    "T_5(q) \\left[\\begin{array}{ccc|c}\n",
+    "  &          &   & 0 \\\\\n",
+    "  & R_z(q_6) &   & 0 \\\\\n",
+    "  &          &   & 0 \\\\\n",
+    "\\hline\n",
+    "0 & 0 & 0 & 1\n",
+    "\\end{array}\\right]\n",
+    "$$\n",
+    "\n",
+    "To obtain the world-space position of the end effector, we simply apply $T_6(q)$ to the local coordinates of the end effector in link 6's frame:\n",
+    "$$\\mathbf{x}(q) = T_6(q) \\begin{bmatrix} L_6 \\\\ 0 \\\\ 0 \\\\ 1 \\end{bmatrix}. $$"
    ]
   },
   {
@@ -4363,7 +4460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
@@ -4399,7 +4496,7 @@
     "width": "307.188px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
