--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -176,7 +176,8 @@
     "being made. It proceeds as follows:\n",
     "\n",
     "*****************\n",
-    "<a name=\"alg:GradientDescent\">Algorithm</a> Gradient Descent\n",
+    "<a name=\"alg:GradientDescent\"></a>\n",
+    "**Algorithm Gradient Descent**\n",
     "\n",
     "1. **for** {$t=1,2,\\ldots,N_{max}$}\n",
     "\n",
