--- a/PlanningWithDynamicsAndUncertainty.ipynb
+++ b/PlanningWithDynamicsAndUncertainty.ipynb
@@ -174,7 +174,8 @@
     "The idea of kinodynamic RRT is to maintain a tree $\\mathcal{T}$ of states connected by feasible paths, rooted from the start.  The tree is grown by sampling a random control from an existing state, and then applying the simulation function Simulate$(x,u)$.  The planner terminates when a state is found in a goal region $G$.  Pseudocode is given below.\n",
     "\n",
     "********************\n",
-    "<a name=\"alg:KinodynamicRRT\">Algorithm Kinodynamic-RRT</a>\n",
+    "<a name=\"alg:KinodynamicRRT\"></a>\n",
+    "**Algorithm Kinodynamic-RRT**\n",
     "1. $T \\gets \\{ x_0 \\}$.\n",
     "* **for** $i=1,...,N$ **do**\n",
     "* &nbsp;&nbsp;&nbsp;$x_{rand} \\gets Sample()$\n",
@@ -990,12 +991,16 @@
     "\n",
     "\n",
     "#### Value iteration \n",
-    "One of the most common algorithms to solve an MDP is *value iteration* (VI).  It proceeds by:\n",
+    "One of the most common algorithms to solve an MDP is *value iteration* (VI).  It proceeds as follows:\n",
     "\n",
+    "*******************\n",
+    "<a name=\"alg:ValueIteration\"></a>\n",
+    "**Algorithm Value Iteration**\n",
     "1. Guess an initial value function $V^0 : S \\rightarrow \\mathbb{R}$.  An uninformed guess assumes all 0's.\n",
     "2. For some number of iterations $t=1,2,3,\\ldots,N$, repeat:\n",
     "3. &nbsp;&nbsp;&nbsp; Compute an updated value function $V^{t}$ from the left hand side of the Bellman equation $\\eqref{eq:DiscountedBellmanEquation}$, replacing the value function on the right hand side with $V^{t+1}$ (Bellman update)\n",
     "4. Output $V^N$.\n",
+    "********************\n",
     "\n",
     "More precisely, the Bellman update step 3 assigns the value of 0 to all terminal nodes, and performs the following assignment for all non-terminal nodes:\n",
     "\n",
@@ -1148,6 +1153,9 @@
     "\n",
     "The second most popular MDP solution technique is *policy iteration* (PI).  Its motivation is that the value function estimates computed by VI will still change, even when the optimal actions determined by $\\eqref{eq:OptimalPolicy}$ have already converged.  So, it focuses on iterating over better policies $\\pi$, and using $\\eqref{eq:MDPInversion}$ to determine the value of the policy. Its pseudocode is as follows:\n",
     "\n",
+    "****************\n",
+    "<a name=\"alg:PolicyIteration\"></a>\n",
+    "**Algorithm Policy Iteration**\n",
     "1. Guess a policy $\\pi$, and set $changed$ to true.\n",
     "2. While $changed$ = true, repeat:\n",
     "3. &nbsp;&nbsp;&nbsp; Calculate the value of policy $\\pi$: $ \\mathbf{v} = (I - \\gamma T_\\pi)^{-1} \\mathbf{r}. $\n",
@@ -1158,6 +1166,7 @@
     "8. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Set $\\pi(s) \\gets \\arg \\max_{a\\in A} v[a]$\n",
     "9. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; $changed \\gets$ true\n",
     "10. Return $\\pi$\n",
+    "***************************\n",
     "\n",
     "Line 3 uses matrix inversion $\\eqref{eq:MDPInversion}$ to calculate the true value of the current policy. If $T_\\pi$ is a sparse matrix (which is a typical case), then sparse matrix techniques can be used to solve this equation quickly, possibly as low as $O(|S|)$ time.  Lines 6--9 update the best action for state $s$ and mark whether the policy has changed.\n",
     "\n",
