Added a couple exercises

--- a/WhatIsMotionPlanning.ipynb
+++ b/WhatIsMotionPlanning.ipynb
@@ -611,6 +611,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "\n",
+    "1. There is a crucial difference between planning to exit a maze and actually escaping a maze.  What is it?  (Hint: consider being blindfolded, kidnapped, and then dropped in the middle of a maze.  The blindfold is now removed.  How does this differ from the information available to a planner?)\n",
+    "2. Consider a coffee delivery robot, whose goal is to move a coffee cup from a counter to a patron's table. Does this problem require deliberative planning, or could it be solved using a behavior scripting technique?  What assumptions could you build in about your environment to help a behavior script?  If those assumptions were not built in, that is, the robot is expected to act in a bustling coffee shop, how much forward prediction does it need to perform?\n",
+    "3. Earlier, we said that if a planner is asymptotically optimal, then \"given more time, it will produce progressively better paths.\" While this statement is true, is the converse also true?  Is there a case in which a planner could produce progressively better paths, but not satisfy the conditions of asymptotically optimality?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": [
      "remove_cell_html"
@@ -647,7 +658,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b87911b55fe24e7fb208455e9b397f78",
+       "model_id": "4c4f8bf67818491b9a7a0b143b826991",
        "version_major": 2,
        "version_minor": 0
       },
@@ -696,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
