Converted to SVG graphics from matplotlib plots

--- a/RobotDynamics.ipynb
+++ b/RobotDynamics.ipynb
@@ -13,9 +13,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lagrangian mechanics\n",
-    "\n",
-    "\n",
     "Rigid Body Dynamics\n",
     "-------------------\n",
     "\n",
@@ -39,7 +36,7 @@
     "Articulated Robot Dynamics\n",
     "--------------------------\n",
     "\n",
-    "### Lagrangian derivation\n",
+    "### Lagrangian mechanics derivation\n",
     "\n",
     "### From forces to torques\n",
     "\n",
