Added third narrow passage figure

--- a/AdvancedTopicsInPlanning.ipynb
+++ b/AdvancedTopicsInPlanning.ipynb
@@ -5879,9 +5879,9 @@
     "*************\n",
     "<a name=\"fig:manipulation_narrow_passage1\"></a>\n",
     "\n",
-    "| (a) 2D workspace | (b) C-space obstacle |\n",
-    "|------------------|----------------------|\n",
-    "|![fig:manipulation_narrow_passage1](figures/planning/manipulation_narrow_passage1.svg) | ![fig:manipulation_narrow_passage2](figures/planning/manipulation_narrow_passage2.svg) |\n",
+    "| (a) 2D workspace | (b) C-obstacle, jaws open | (c) C-obstacle, jaws closed |\n",
+    "|------------------|---------------------------|-----------------------------|\n",
+    "|![fig:manipulation_narrow_passage1](figures/planning/manipulation_narrow_passage1.svg) | ![fig:manipulation_narrow_passage2](figures/planning/manipulation_narrow_passage2.svg) | ![fig:manipulation_narrow_passage3](figures/planning/manipulation_narrow_passage3.svg) |\n",
     "\n",
     "<div class=\"figcaption\"><b>Figure 14</b>. \n",
     "    A 2D translating gripper needs to meet its jaws to the yellow object's protrusion at the indicated points.  The blue circle indicates the gripper reference point. Because the gripper's jaws fit tightly about the protrusion, this induces a relatively deep narrow passage in the C-obstacle.  If rotation were allowed, the passage would be narrow in the rotation dimension as well.\n",
